--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
 {
-  "name": "dojo",
+  "name": "gamble360",
   "version": "1.0.0",
   "description": "",
   "main": "truffle-config.js",
   "scripts": {
-    "start": "webpack serve",
-    "build": "webpack",
-    "dev": "webpack serve",
-    "compile": "npx truffle compile",
-    "migrate:dev": "npx truffle migrate --network develop",
-    "migrate:evmos": "npx truffle migrate --network evmos",
-    "migrate:tevmos": "npx truffle migrate --network tevmos",
-    "migrate:mumbai": "npx truffle migrate --network mumbai",
-    "migrate:mantletest": "npx truffle migrate --network mantletest",
-    "migrate:polygon": "npx truffle migrate --network polygon",
-    "migrate:arbi": "npx truffle migrate --network arbitrum",
-    "migrate:arbirink": "npx truffle migrate --network arbitrinkeby",
-    "migrate:opti": "npx truffle migrate --network optimism",
-    "migrate:optikov": "npx truffle migrate --network optikovan",
-    "migrate:main": "npx truffle migrate --network main",
-    "migrate:rinkeby": "npx truffle migrate --network rinkeby",
-    "migrate:bsc": "npx truffle migrate --network bsc",
-    "migrate:chalen": "npx truffle migrate --network chalen",
-    "migrate:avax": "npx truffle migrate --network avax",
-    "migrate:fuji": "npx truffle migrate --network fuji",
-    "migrate:moonriver": "npx truffle migrate --network moonriver"
+    "start": "sudo webpack serve",
+    "build": "sudo webpack",
+    "dev": "sudo webpack serve",
+    "compile": "sudo npx truffle compile",
+    "migrate:dev": "sudo npx truffle migrate --network develop",
+    "migrate:evmos": "sudo npx truffle migrate --network evmos",
+    "migrate:tevmos": "sudo npx truffle migrate --network tevmos",
+    "migrate:mumbai": "sudo npx truffle migrate --network mumbai",
+    "migrate:mantletest": "sudo npx truffle migrate --network mantletest",
+    "migrate:polygon": "sudo npx truffle migrate --network polygon",
+    "migrate:arbi": "sudo npx truffle migrate --network arbitrum",
+    "migrate:arbirink": "sudo npx truffle migrate --network arbitrinkeby",
+    "migrate:opti": "sudo npx truffle migrate --network optimism",
+    "migrate:optikov": "sudo npx truffle migrate --network optikovan",
+    "migrate:main": "sudo npx truffle migrate --network main",
+    "migrate:rinkeby": "sudo npx truffle migrate --network rinkeby",
+    "migrate:bsc": "sudo npx truffle migrate --network bsc",
+    "migrate:aurora": "sudo npx truffle migrate --network aurora",
+    "migrate:taurora": "sudo npx truffle migrate --network taurora",
+    "migrate:chalen": "sudo npx truffle migrate --network chalen",
+    "migrate:avax": "sudo npx truffle migrate --network avax",
+    "migrate:fuji": "sudo npx truffle migrate --network fuji",
+    "migrate:moonriver": "sudo npx truffle migrate --network moonriver"
   },
   "keywords": [],
   "author": "",
